# metro5

./: Cargo.toml  README.md  justfile
crates/app/: Cargo.toml
crates/app/src/: app.rs  app_state.rs  commands.rs  errors.rs  events.rs  help_state.rs  lib.rs  ports.rs  queries.rs  scroll_state.rs
crates/domain/: Cargo.toml
crates/domain/src/: entities.rs  errors.rs  lib.rs  process.rs
crates/infra/: Cargo.toml
crates/infra/src/: errors.rs  fs.rs  ingest_keys.rs  ingest_logs.rs  lib.rs  metro.rs
crates/tui/: Cargo.toml
crates/tui/src/: errors.rs  help.rs  lib.rs  locales.rs  styles.rs  ui.rs  widgets.rs
