[workspace]
members = [
    "crates/bin",
    "crates/domain",
    "crates/app",
    "crates/infra",
    "crates/tui",
]
resolver = "3"

[workspace.dependencies]
thiserror = "2.0.18"
bin = { package = "metro5", path = "crates/bin" }
domain = { package = "metro5-domain", path = "crates/domain" }
app = { package = "metro5-app", path = "crates/app" }
infra = { package = "metro5-infra", path = "crates/infra" }
tui = { package = "metro5-tui", path = "crates/tui" }



